src/manifests/valkey/02-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey-headless
  namespace: valkey
  labels:
    app: valkey
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: valkey
  ports:
    - name: client
      port: 6379
      targetPort: 6379
      protocol: TCP
    - name: cluster-bus
      port: 16379
      targetPort: 16379
      protocol: TCP
