src/manifests/valkey/03-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: valkey
  labels:
    app: valkey
spec:
  type: ClusterIP
  selector:
    app: valkey
  ports:
    - name: client
      port: 6379
      targetPort: 6379
      protocol: TCP
